<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/question_textviewframe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3FC34"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/tru"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/prev_button"
        app:layout_constraintTop_toBottomOf="@+id/CardView" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/fal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/true_button"
        app:layout_constraintTop_toBottomOf="@+id/CardView" />

    <ImageButton
        android:id="@+id/prev_button"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardView"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/false_button"
        app:layout_constraintTop_toBottomOf="@+id/CardView"
        app:srcCompat="@android:drawable/ic_media_next" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/chewy"
        android:text="@string/triviatest"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/counter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:text="@string/counter_questions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="381dp"
        android:layout_height="301dp"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="7dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/question_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/hello_there"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/Scoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="@font/chewy"
        android:text="@string/score_system"
        app:layout_constraintEnd_toStartOf="@+id/counter_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/highest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="24dp"
        android:text="@string/high_score"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/CardView"
        app:layout_constraintEnd_toStartOf="@+id/counter_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Scoring" />

</androidx.constraintlayout.widget.ConstraintLayout>